// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text applies custom inline styles 1`] = `
.emotion-0 {
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 10px;
  margin-left: 0;
  color: #212121;
  font-size: 14px;
  line-height: 21px;
  -webkit-letter-spacing: 0.03em;
  -moz-letter-spacing: 0.03em;
  -ms-letter-spacing: 0.03em;
  letter-spacing: 0.03em;
  font-weight: 400;
}

<p
  className="emotion-0"
>
  Don't talk about snacks
</p>
`;

exports[`Text renders all typography variants correctly 1`] = `
.emotion-0 {
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  color: #212121;
  font-size: 92px;
  line-height: 138px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-weight: 400;
}

<h1
  className="emotion-0"
>
  Don't talk about snacks
</h1>
`;

exports[`Text renders all typography variants correctly 2`] = `
.emotion-0 {
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  color: #212121;
  font-size: 82px;
  line-height: 123px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-weight: 400;
}

<h1
  className="emotion-0"
>
  Don't talk about snacks
</h1>
`;

exports[`Text renders all typography variants correctly 3`] = `
.emotion-0 {
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  color: #212121;
  font-size: 72px;
  line-height: 108px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-weight: 400;
}

<h1
  className="emotion-0"
>
  Don't talk about snacks
</h1>
`;

exports[`Text renders all typography variants correctly 4`] = `
.emotion-0 {
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  color: #212121;
  font-size: 64px;
  line-height: 96px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-weight: 400;
}

<h1
  className="emotion-0"
>
  Don't talk about snacks
</h1>
`;

exports[`Text renders all typography variants correctly 5`] = `
.emotion-0 {
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  color: #212121;
  font-size: 58px;
  line-height: 87px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-weight: 400;
}

<h1
  className="emotion-0"
>
  Don't talk about snacks
</h1>
`;

exports[`Text renders all typography variants correctly 6`] = `
.emotion-0 {
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  color: #212121;
  font-size: 46px;
  line-height: 69px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-weight: 400;
}

<h1
  className="emotion-0"
>
  Don't talk about snacks
</h1>
`;

exports[`Text renders all typography variants correctly 7`] = `
.emotion-0 {
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  color: #212121;
  font-size: 36px;
  line-height: 54px;
  -webkit-letter-spacing: 0.03em;
  -moz-letter-spacing: 0.03em;
  -ms-letter-spacing: 0.03em;
  letter-spacing: 0.03em;
  font-weight: 400;
}

<h2
  className="emotion-0"
>
  Don't talk about snacks
</h2>
`;

exports[`Text renders all typography variants correctly 8`] = `
.emotion-0 {
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  color: #212121;
  font-size: 28px;
  line-height: 42px;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  font-weight: 700;
}

<h2
  className="emotion-0"
>
  Don't talk about snacks
</h2>
`;

exports[`Text renders all typography variants correctly 9`] = `
.emotion-0 {
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  color: #212121;
  font-size: 22px;
  line-height: 32px;
  -webkit-letter-spacing: 0.03em;
  -moz-letter-spacing: 0.03em;
  -ms-letter-spacing: 0.03em;
  letter-spacing: 0.03em;
  font-weight: 400;
}

<h2
  className="emotion-0"
>
  Don't talk about snacks
</h2>
`;

exports[`Text renders all typography variants correctly 10`] = `
.emotion-0 {
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  color: #212121;
  font-size: 18px;
  line-height: 32px;
  -webkit-letter-spacing: 0.03em;
  -moz-letter-spacing: 0.03em;
  -ms-letter-spacing: 0.03em;
  letter-spacing: 0.03em;
  font-weight: 400;
}

<p
  className="emotion-0"
>
  Don't talk about snacks
</p>
`;

exports[`Text renders all typography variants correctly 11`] = `
.emotion-0 {
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  color: #212121;
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: 0.03em;
  -moz-letter-spacing: 0.03em;
  -ms-letter-spacing: 0.03em;
  letter-spacing: 0.03em;
  font-weight: 400;
}

<p
  className="emotion-0"
>
  Don't talk about snacks
</p>
`;

exports[`Text renders all typography variants correctly 12`] = `
.emotion-0 {
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  color: #212121;
  font-size: 14px;
  line-height: 21px;
  -webkit-letter-spacing: 0.03em;
  -moz-letter-spacing: 0.03em;
  -ms-letter-spacing: 0.03em;
  letter-spacing: 0.03em;
  font-weight: 400;
}

<p
  className="emotion-0"
>
  Don't talk about snacks
</p>
`;

exports[`Text renders all typography variants correctly 13`] = `
.emotion-0 {
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  color: #212121;
  font-size: 12px;
  line-height: 18px;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  font-weight: 400;
}

<p
  className="emotion-0"
>
  Don't talk about snacks
</p>
`;

exports[`Text renders all typography variants correctly 14`] = `
.emotion-0 {
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  color: #212121;
  font-size: 11px;
  line-height: 16px;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  font-weight: 400;
}

<p
  className="emotion-0"
>
  Don't talk about snacks
</p>
`;
